--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
