--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server,js",
   "dependencies": {
     "@google-cloud/storage": "^5.8.1",
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -16,9 +17,8 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "winston": "^3.3.3",
-    "winston-mongodb": "^5.0.7"
+    "winston-mongodb": "^5.0.7",
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
