--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "winston": "^3.3.3",
-    "winston-mongodb": "^5.0.7",
+    "winston-mongodb": "^5.0.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
