--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "ioredis": "^4.28.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
